keep all results in separate JSON files

--- a/results/image_sizes.html
+++ b/results/image_sizes.html
@@ -2,6 +2,7 @@
   <head>
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="image_sizes.js"></script>
     <script type="text/javascript">
       var MIN_COUNT = 400;
 
@@ -13,16 +14,17 @@
       // Callback that creates and populates a data table,
       // instantiates the pie chart, passes in the data and
       // draws it.
-      var imageSizes;
       function drawChart() {
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'Megapixels');
         data.addColumn('number', 'Count');
 
         var item;
-        for (var i = 0; i < imageSizes.length; i++){
-          item = imageSizes[i];
-          data.addRow([item.megapixels.toString(), item.count]);
+        for (var i = 0; i < ImageSizes.length; i++){
+          item = ImageSizes[i];
+          if (item.megapixels !== 'unknown'){
+            data.addRow([item.megapixels.toString(), item.count]);
+          }
         }
 
         var view = new google.visualization.DataView(data);
@@ -41,301 +43,6 @@
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
         chart.draw(view, options);
       }
-
-      imageSizes = [
-        {
-          "megapixels" : 1,
-          "count" : 29220
-        },
-        {
-          "megapixels" : 2,
-          "count" : 24547
-        },
-        {
-          "megapixels" : 3,
-          "count" : 8467
-        },
-        {
-          "megapixels" : 4,
-          "count" : 5493
-        },
-        {
-          "megapixels" : 5,
-          "count" : 3170
-        },
-        {
-          "megapixels" : 6,
-          "count" : 5199
-        },
-        {
-          "megapixels" : 7,
-          "count" : 3285
-        },
-        {
-          "megapixels" : 8,
-          "count" : 1937
-        },
-        {
-          "megapixels" : 9,
-          "count" : 2861
-        },
-        {
-          "megapixels" : 10,
-          "count" : 1501
-        },
-        {
-          "megapixels" : 11,
-          "count" : 2958
-        },
-        {
-          "megapixels" : 12,
-          "count" : 468
-        },
-        {
-          "megapixels" : 13,
-          "count" : 3523
-        },
-        {
-          "megapixels" : 14,
-          "count" : 275
-        },
-        {
-          "megapixels" : 15,
-          "count" : 1566
-        },
-        {
-          "megapixels" : 16,
-          "count" : 2281
-        },
-        {
-          "megapixels" : 17,
-          "count" : 522
-        },
-        {
-          "megapixels" : 18,
-          "count" : 115
-        },
-        {
-          "megapixels" : 19,
-          "count" : 1375
-        },
-        {
-          "megapixels" : 20,
-          "count" : 39
-        },
-        {
-          "megapixels" : 21,
-          "count" : 20
-        },
-        {
-          "megapixels" : 22,
-          "count" : 341
-        },
-        {
-          "megapixels" : 23,
-          "count" : 13
-        },
-        {
-          "megapixels" : 24,
-          "count" : 9
-        },
-        {
-          "megapixels" : 25,
-          "count" : 30
-        },
-        {
-          "megapixels" : 26,
-          "count" : 16
-        },
-        {
-          "megapixels" : 27,
-          "count" : 9
-        },
-        {
-          "megapixels" : 28,
-          "count" : 122
-        },
-        {
-          "megapixels" : 29,
-          "count" : 9
-        },
-        {
-          "megapixels" : 30,
-          "count" : 5
-        },
-        {
-          "megapixels" : 31,
-          "count" : 3
-        },
-        {
-          "megapixels" : 32,
-          "count" : 5
-        },
-        {
-          "megapixels" : 33,
-          "count" : 5
-        },
-        {
-          "megapixels" : 34,
-          "count" : 7
-        },
-        {
-          "megapixels" : 35,
-          "count" : 6
-        },
-        {
-          "megapixels" : 36,
-          "count" : 14
-        },
-        {
-          "megapixels" : 37,
-          "count" : 9
-        },
-        {
-          "megapixels" : 38,
-          "count" : 9
-        },
-        {
-          "megapixels" : 39,
-          "count" : 2
-        },
-        {
-          "megapixels" : 40,
-          "count" : 4
-        },
-        {
-          "megapixels" : 41,
-          "count" : 1
-        },
-        {
-          "megapixels" : 42,
-          "count" : 1
-        },
-        {
-          "megapixels" : 43,
-          "count" : 1
-        },
-        {
-          "megapixels" : 44,
-          "count" : 2
-        },
-        {
-          "megapixels" : 45,
-          "count" : 1
-        },
-        {
-          "megapixels" : 47,
-          "count" : 4
-        },
-        {
-          "megapixels" : 50,
-          "count" : 2
-        },
-        {
-          "megapixels" : 51,
-          "count" : 1
-        },
-        {
-          "megapixels" : 53,
-          "count" : 2
-        },
-        {
-          "megapixels" : 54,
-          "count" : 2
-        },
-        {
-          "megapixels" : 55,
-          "count" : 8
-        },
-        {
-          "megapixels" : 57,
-          "count" : 2
-        },
-        {
-          "megapixels" : 61,
-          "count" : 2
-        },
-        {
-          "megapixels" : 63,
-          "count" : 1
-        },
-        {
-          "megapixels" : 64,
-          "count" : 1
-        },
-        {
-          "megapixels" : 66,
-          "count" : 1
-        },
-        {
-          "megapixels" : 68,
-          "count" : 1
-        },
-        {
-          "megapixels" : 69,
-          "count" : 1
-        },
-        {
-          "megapixels" : 70,
-          "count" : 1
-        },
-        {
-          "megapixels" : 71,
-          "count" : 6
-        },
-        {
-          "megapixels" : 72,
-          "count" : 1
-        },
-        {
-          "megapixels" : 74,
-          "count" : 1
-        },
-        {
-          "megapixels" : 79,
-          "count" : 2
-        },
-        {
-          "megapixels" : 81,
-          "count" : 1
-        },
-        {
-          "megapixels" : 82,
-          "count" : 1
-        },
-        {
-          "megapixels" : 88,
-          "count" : 1
-        },
-        {
-          "megapixels" : 91,
-          "count" : 1
-        },
-        {
-          "megapixels" : 98,
-          "count" : 4
-        },
-        {
-          "megapixels" : 364,
-          "count" : 1
-        },
-        {
-          "megapixels" : 398,
-          "count" : 1
-        },
-        {
-          "megapixels" : 408,
-          "count" : 1
-        },
-        // {
-        //   "megapixels" : "unknown",
-        //   "count" : 825
-        // },
-        {
-          "megapixels" : 90,
-          "count" : 1
-        }
-      ];
     </script>
   </head>
 
