--- a/results/aspect_ratios.html
+++ b/results/aspect_ratios.html
@@ -2,6 +2,7 @@
   <head>
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="aspect_ratios.js"></script>
     <script type="text/javascript">
       var MIN_COUNT = 150;
 
@@ -14,7 +15,6 @@
       // Callback that creates and populates a data table,
       // instantiates the pie chart, passes in the data and
       // draws it.
-      var aspectRatios;
       function drawChart() {
         var data = new google.visualization.DataTable(),
           ratioCol = data.addColumn('string', 'Aspect Ratio');
@@ -22,9 +22,11 @@
         data.addColumn('number', 'Count');
 
         var item;
-        for (var i = 0; i < aspectRatios.length; i++){
-          item = aspectRatios[i];
-          data.addRow([item.aspectRatio, item.count]);
+        for (var i = 0; i < AspectRatios.length; i++){
+          item = AspectRatios[i];
+          if (item.aspectRatio !== 'unknown'){
+            data.addRow([item.aspectRatio, item.count]);
+          }
         }
 
         data.sort(ratioCol);
@@ -45,374 +47,6 @@
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
         chart.draw(view, options);
       }
-
-
-      aspectRatios = [
-        // {
-        //   "aspectRatio" : "unknown",
-        //   "count" : 825
-        // },
-        {
-          "aspectRatio" : "1.3",
-          "count" : 25641
-        },
-        {
-          "aspectRatio" : "1.8",
-          "count" : 5060
-        },
-        {
-          "aspectRatio" : "1.5",
-          "count" : 26799
-        },
-        {
-          "aspectRatio" : "1.7",
-          "count" : 1849
-        },
-        {
-          "aspectRatio" : "1.4",
-          "count" : 3595
-        },
-        {
-          "aspectRatio" : "1.1",
-          "count" : 1119
-        },
-        {
-          "aspectRatio" : "0.7",
-          "count" : 9286
-        },
-        {
-          "aspectRatio" : "2.6",
-          "count" : 106
-        },
-        {
-          "aspectRatio" : "0.8",
-          "count" : 6964
-        },
-        {
-          "aspectRatio" : "2.0",
-          "count" : 567
-        },
-        {
-          "aspectRatio" : "1.0",
-          "count" : 6700
-        },
-        {
-          "aspectRatio" : "1.6",
-          "count" : 3791
-        },
-        {
-          "aspectRatio" : "0.9",
-          "count" : 1794
-        },
-        {
-          "aspectRatio" : "1.2",
-          "count" : 1562
-        },
-        {
-          "aspectRatio" : "0.6",
-          "count" : 1139
-        },
-        {
-          "aspectRatio" : "2.2",
-          "count" : 334
-        },
-        {
-          "aspectRatio" : "2.9",
-          "count" : 68
-        },
-        {
-          "aspectRatio" : "1.9",
-          "count" : 728
-        },
-        {
-          "aspectRatio" : "3.3",
-          "count" : 42
-        },
-        {
-          "aspectRatio" : "2.1",
-          "count" : 642
-        },
-        {
-          "aspectRatio" : "2.5",
-          "count" : 127
-        },
-        {
-          "aspectRatio" : "3.1",
-          "count" : 40
-        },
-        {
-          "aspectRatio" : "2.8",
-          "count" : 87
-        },
-        {
-          "aspectRatio" : "2.4",
-          "count" : 181
-        },
-        {
-          "aspectRatio" : "2.3",
-          "count" : 181
-        },
-        {
-          "aspectRatio" : "3.0",
-          "count" : 77
-        },
-        {
-          "aspectRatio" : "3.5",
-          "count" : 52
-        },
-        {
-          "aspectRatio" : "4.0",
-          "count" : 30
-        },
-        {
-          "aspectRatio" : "0.3",
-          "count" : 33
-        },
-        {
-          "aspectRatio" : "2.7",
-          "count" : 112
-        },
-        {
-          "aspectRatio" : "4.5",
-          "count" : 10
-        },
-        {
-          "aspectRatio" : "0.4",
-          "count" : 107
-        },
-        {
-          "aspectRatio" : "5.3",
-          "count" : 5
-        },
-        {
-          "aspectRatio" : "4.6",
-          "count" : 13
-        },
-        {
-          "aspectRatio" : "0.5",
-          "count" : 266
-        },
-        {
-          "aspectRatio" : "3.2",
-          "count" : 30
-        },
-        {
-          "aspectRatio" : "6.4",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "5.7",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "4.4",
-          "count" : 7
-        },
-        {
-          "aspectRatio" : "5.1",
-          "count" : 6
-        },
-        {
-          "aspectRatio" : "0.2",
-          "count" : 25
-        },
-        {
-          "aspectRatio" : "3.9",
-          "count" : 18
-        },
-        {
-          "aspectRatio" : "4.3",
-          "count" : 9
-        },
-        {
-          "aspectRatio" : "3.7",
-          "count" : 24
-        },
-        {
-          "aspectRatio" : "4.9",
-          "count" : 6
-        },
-        {
-          "aspectRatio" : "5.2",
-          "count" : 5
-        },
-        {
-          "aspectRatio" : "3.6",
-          "count" : 19
-        },
-        {
-          "aspectRatio" : "4.8",
-          "count" : 18
-        },
-        {
-          "aspectRatio" : "3.4",
-          "count" : 24
-        },
-        {
-          "aspectRatio" : "3.8",
-          "count" : 17
-        },
-        {
-          "aspectRatio" : "5.0",
-          "count" : 5
-        },
-        {
-          "aspectRatio" : "5.4",
-          "count" : 6
-        },
-        {
-          "aspectRatio" : "7.7",
-          "count" : 3
-        },
-        {
-          "aspectRatio" : "7.4",
-          "count" : 4
-        },
-        {
-          "aspectRatio" : "6.0",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "11.8",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "0.1",
-          "count" : 7
-        },
-        {
-          "aspectRatio" : "8.8",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "6.2",
-          "count" : 6
-        },
-        {
-          "aspectRatio" : "7.5",
-          "count" : 3
-        },
-        {
-          "aspectRatio" : "6.1",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "4.2",
-          "count" : 10
-        },
-        {
-          "aspectRatio" : "10.0",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "100.0",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "4.1",
-          "count" : 10
-        },
-        {
-          "aspectRatio" : "7.3",
-          "count" : 3
-        },
-        {
-          "aspectRatio" : "5.8",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "12.6",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "11.9",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "6.6",
-          "count" : 5
-        },
-        {
-          "aspectRatio" : "8.5",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "8.1",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "6.5",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "7.0",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "11.2",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "6.3",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "9.6",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "7.1",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "7.6",
-          "count" : 2
-        },
-        {
-          "aspectRatio" : "10.8",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "0.0",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "6.8",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "4.7",
-          "count" : 5
-        },
-        {
-          "aspectRatio" : "6.7",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "5.6",
-          "count" : 3
-        },
-        {
-          "aspectRatio" : "5.9",
-          "count" : 3
-        },
-        {
-          "aspectRatio" : "11.4",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "10.9",
-          "count" : 1
-        },
-        {
-          "aspectRatio" : "8.6",
-          "count" : 3
-        },
-        {
-          "aspectRatio" : "62.0",
-          "count" : 1
-        }
-      ];
     </script>
   </head>
 
